cmake_minimum_required(VERSION 2.6)

PROJECT(Biolib_staden_iolib)
SET (M_NAME staden_io_lib)
# SET (M_VERSION 1.11.6)

IF(NOT BUILD_LIBS)
  SET (MAP_ROOT ../../../..)
  SET (CMAKE_MODULE_PATH ${MAP_ROOT}/tools/cmake-support/modules)
ENDIF()

SET(USE_ZLIB TRUE)

FIND_PACKAGE(Map REQUIRED)
FIND_PACKAGE(MapLibraries REQUIRED)

SET(CONTRIB_PATH ${MAP_ROOT}/contrib/${M_NAME})
SET(CONTRIB_SRC_PATH ${CONTRIB_PATH}/io_lib)
 
MESSAGE("CONTRIB_PATH=${CONTRIB_PATH}")
 
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ../build)

INCLUDE_DIRECTORIES(${CONTRIB_PATH})

NAME_CLIB()

FILE(STRINGS files.txt CONTRIB_FILES)
ADD_LIBRARY(${LIBNAME} SHARED
  ${CONTRIB_FILES}
)

BUILD_CLIB()
INSTALL_CLIB()
