cmake_minimum_required(VERSION 2.6)

ENABLE_TESTING()

SET (M_NAME emboss)
SET (M_VERSION 6.1.0)
SET (INTERFACE perl_${M_NAME}.i)

IF(NOT BUILD_LIBS)
  SET (MAP_ROOT ../../../../..)
  SET (CMAKE_MODULE_PATH ${MAP_ROOT}/tools/cmake-support/modules)
ENDIF(NOT BUILD_LIBS)
# SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY biolib)

# SET(USE_C_LINKAGE TRUE)
SET(EMBOSS_PATH ${MAP_ROOT}/contrib/EMBOSS-${M_VERSION})
SET(USE_SWIG_INCLUDEPATH ${EMBOSS_PATH}/ajax)

# SET (USE_ZLIB TRUE)
# SET (USE_INCLUDEPATH io_lib)
INCLUDE_DIRECTORIES(${EMBOSS_PATH}/ajax)
# INCLUDE(CMakeBackwardCompatibilityC)

FIND_PACKAGE(MapPerl)

POST_BUILD_PERL_BINDINGS()
TEST_PERL_BINDINGS()
INSTALL_PERL_BINDINGS()

